all characters are linked w/ description

--- a/Templates/the-gallaghers/frank.html
+++ b/Templates/the-gallaghers/frank.html
@@ -57,7 +57,10 @@
     
     
     
-	<div class="content"><!-- InstanceBeginEditable name="Content" -->Content<!-- InstanceEndEditable -->
+	<div class="content"><!-- InstanceBeginEditable name="Content" -->
+	  <h1>Frank Gallagher</h1>
+	  <p>Frank Gallagher (William H. Macy) is the father of six children. He is a deadbeat alcoholic, drug addict, and morally deficient freeloader who relies on his children to barely get by. He swindles the state welfare system at every opportunity and he starts affairs with anyone he can, leading him to have even more children. His opportunistic deceit appears to have been impressed on his kids.</p>
+	<!-- InstanceEndEditable -->
     
 
 	</div>
