--- a/Templates/the-gallaghers/debbie.html
+++ b/Templates/the-gallaghers/debbie.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Shameless Template 2.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!-- InstanceBeginEditable name="doctitle" -->
 <title>Untitled Document</title>
+<!-- InstanceEndEditable -->
+<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
+<link href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+<div class="wrapper">
+<div class="navigation"><!-- InstanceBeginEditable name="Navigation" -->Navigation<!-- InstanceEndEditable -->
+    <table width="950">
+  <tr>
+    <td width="237" class="home"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/index.html">Home</a></td>
+    <td width="236" class="doc"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-doctors/index.html">The Gallaghers</a></td>
+    <td width="237" class="companions"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-companions/index.html">Main Characters</a></td>
+    <td width="220" class="villains"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-villains/index.html">About The Series</a></td>
+  </tr>
+</table>
+
+  <div class="wrapper">
+<div class="banner"><!-- InstanceBeginEditable name="Banner" -->Banner<!-- InstanceEndEditable -->
+</div> 
+  </div>
+    
+    
+    <table width="950">
+  <tr>
+    <td class="nav"><ul>
+    	<li><a href="../the-gallaghers/">The Gallaghers</a></li>
+        <li><a href="frank.html">Frank Gallagher</a></li>
+        <li><a href="monica.html">Monica Gallagher</a></li>
+        <li><a href="fiona.html">Fiona Gallagher</a></li>
+        <li><a href="philip.html">Philip &quot;Lip&quot; Gallagher</a></li>
+        <li><a href="ian.html">Ian Gallagher</a></li>
+        <li><a href="debbie.html">Debbie Gallagher</a></li>
+        <li><a href="carl.html">Carl Gallagher</a></li>
+        <li><a href="liam.html">Liam Gallagher</a></li>
+
+    </ul>
+      <ul>
+    		<li><a href="../main-characters/"> Main Characters</a></li>
+          <li><a href="../main-characters/kevin.html">Kevin Ball </a></li>
+          <li><a href="../main-characters/veronica.html">Veronica Ball </a></li>
+          <li><a href="../main-characters/sheila.html">Sheila Jackson</a></li>
+          <li><a href="../main-characters/mickey.html">Mickey Milkovich</a></li>
+          <li><a href="../main-characters/sammi.html">Sammi Slott</a></li>
+      </ul>
+    </tr>
+</table>
+    
+    
+    
+    
+    
+	<div class="content"><!-- InstanceBeginEditable name="Content" -->
+	  <h1>Debbie Gallagher</h1>
+	  <p>Debbie Gallagher (Emma Kenney) is one of the middle Gallagher children (14). She is reserved, intent on positive impressing and willing to cover for others albeit influenced by the deleterious family culture, in contrast to her brash and reckless brothers. She brings baby brother Liam to school for show-and-tell when there's no one else to watch him, puts a pillow under her father's head when he's passed out on the floor, and collects money for charity year-round—only some of which she keeps for herself. She is capable of forgiveness for her father's neglect and irresponsibility as well as her mother's absence. She is very mature in some ways and therefore has trouble making friends with people her age.</p>
+	  <h1>&nbsp;</h1>
+	<!-- InstanceEndEditable -->
+    
+
+	</div>
+</div>
+
+
+
+
+
+
+
 </body>
-</html>
+<!-- InstanceEnd --></html>
