NEW modified template all links work !

--- a/Templates/main-characters/veronica.html
+++ b/Templates/main-characters/veronica.html
@@ -1,76 +1,57 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Shameless Template 2.dwt" codeOutsideHTMLIsLocked="false" -->
+<!DOCTYPE HTML>
+<html><!-- InstanceBegin template="/Templates/Untitled-2.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Untitled Document</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-<link href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/styles.css" rel="stylesheet" type="text/css" />
+<!-- InstanceParam name="The Doctors Menu" type="boolean" value="false" -->
+<!-- InstanceParam name="The Companions" type="boolean" value="true" -->
+<!-- InstanceParam name="The Villains" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+body {
+	background-color: #CCC;
+}
+</style>
 </head>
 
 <body>
-<div class="wrapper">
-<div class="navigation"><!-- InstanceBeginEditable name="Navigation" -->Navigation<!-- InstanceEndEditable -->
-    <table width="950">
+<table width="950">
   <tr>
-    <td width="237" class="home"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/index.html">Home</a></td>
-    <td width="236" class="doc"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-doctors/index.html">The Gallaghers</a></td>
-    <td width="237" class="companions"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-companions/index.html">Main Characters</a></td>
-    <td width="220" class="villains"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-villains/index.html">About The Series</a></td>
+    <td width="237" class="home"><a href="../index.html">Home</a></td>
+    <td width="236" class="doc"><a href="../the-gallaghers/index.html">The Gallaghers</a></td>
+    <td width="237" class="companions"><a href="index.html">Main Charcters </a></td>
+    <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
+  </tr>
+  <tr>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
   </tr>
 </table>
-
-  <div class="wrapper">
-<div class="banner"><!-- InstanceBeginEditable name="Banner" -->Banner<!-- InstanceEndEditable -->
-</div> 
-  </div>
-    
-    
-    <table width="950">
+<table width="950">
   <tr>
     <td class="nav"><ul>
-    	<li><a href="../the-gallaghers/">The Gallaghers</a></li>
-        <li><a href="../the-gallaghers/frank.html">Frank Gallagher</a></li>
-        <li><a href="../the-gallaghers/monica.html">Monica Gallagher</a></li>
-        <li><a href="../the-gallaghers/fiona.html">Fiona Gallagher</a></li>
-        <li><a href="../the-gallaghers/philip.html">Philip &quot;Lip&quot; Gallagher</a></li>
-        <li><a href="../the-gallaghers/ian.html">Ian Gallagher</a></li>
-        <li><a href="../the-gallaghers/debbie.html">Debbie Gallagher</a></li>
-        <li><a href="../the-gallaghers/carl.html">Carl Gallagher</a></li>
-        <li><a href="../the-gallaghers/liam.html">Liam Gallagher</a></li>
-
+      
     </ul>
       <ul>
-    		<li><a href="../main-characters/"> Main Characters</a></li>
-          <li><a href="kevin.html">Kevin Ball </a></li>
-          <li><a href="veronica.html">Veronica Ball </a></li>
-          <li><a href="sheila.html">Sheila Jackson</a></li>
-          <li><a href="mickey.html">Mickey Milkovich</a></li>
-          <li><a href="sammi.html">Sammi Slott</a></li>
+        <a href="kevin.html">
+        </a>
+        <li><a href="kevin.html">Kevin Ball</a></li>
+        <li><a href="veronica.html">Veronica Ball</a></li>
+        <li><a href="sheila.html">Sheila Jackson</a></li>
+        <li><a href="mickey.html">Mickey Milkovich</a></li>
+        <li><a href="sammi.html">Sammi Slott</a></li>
+        
       </ul>
-    </tr>
+    <a href="../About The Series.html"></a></td>
+    <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1>Veronica Ball</h1>
+      <p>Veronica &quot;Vee&quot; Ball&nbsp;(Shanola Hampton) is the Gallaghers' neighbor and Fiona's best friend and confidante; she often gives Fiona advice concerning relationships, caring for her siblings, and caring for herself. Always willing and able to lend a hand, Veronica had pursued a medical career until she was fired from the hospital for stealing medical supplies. She currently works as a webcam girl.</p>
+<!-- InstanceEndEditable --></td>
+  </tr>
 </table>
-    
-    
-    
-    
-    
-	<div class="content"><!-- InstanceBeginEditable name="Content" -->
-	  <h1>Veronica Ball</h1>
-	  <p>Veronica &quot;Vee&quot; Ball (Shanola Hampton) is the Gallaghers' neighbor and Fiona's best friend and confidante; she often gives Fiona advice concerning relationships, caring for her siblings, and caring for herself. Always willing and able to lend a hand, Veronica had pursued a medical career until she was fired from the hospital for stealing medical supplies. She currently works as a webcam girl. </p>
-	<!-- InstanceEndEditable -->
-    
-
-	</div>
-</div>
-
-
-
-
-
-
-
+<p>&nbsp;</p>
 </body>
 <!-- InstanceEnd --></html>
