--- a/Templates/the-gallaghers/carl.html
+++ b/Templates/the-gallaghers/carl.html
@@ -1,76 +1,60 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Shameless Template 2.dwt" codeOutsideHTMLIsLocked="false" -->
+<!DOCTYPE HTML>
+<html><!-- InstanceBegin template="/Templates/Untitled-2.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Untitled Document</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-<link href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/styles.css" rel="stylesheet" type="text/css" />
+<!-- InstanceParam name="The Doctors Menu" type="boolean" value="true" -->
+<!-- InstanceParam name="The Companions" type="boolean" value="false" -->
+<!-- InstanceParam name="The Villains" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+body {
+	background-color: #CCC;
+}
+</style>
 </head>
 
 <body>
-<div class="wrapper">
-<div class="navigation"><!-- InstanceBeginEditable name="Navigation" -->Navigation<!-- InstanceEndEditable -->
-    <table width="950">
+<table width="950">
   <tr>
-    <td width="237" class="home"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/index.html">Home</a></td>
-    <td width="236" class="doc"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-doctors/index.html">The Gallaghers</a></td>
-    <td width="237" class="companions"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-companions/index.html">Main Characters</a></td>
-    <td width="220" class="villains"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-villains/index.html">About The Series</a></td>
+    <td width="237" class="home"><a href="../index.html">Home</a></td>
+    <td width="236" class="doc"><a href="index.html">The Gallaghers</a></td>
+    <td width="237" class="companions"><a href="../main-characters/index.html">Main Charcters </a></td>
+    <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
+  </tr>
+  <tr>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
   </tr>
 </table>
-
-  <div class="wrapper">
-<div class="banner"><!-- InstanceBeginEditable name="Banner" -->Banner<!-- InstanceEndEditable -->
-</div> 
-  </div>
-    
-    
-    <table width="950">
+<table width="950">
   <tr>
     <td class="nav"><ul>
-    	<li><a href="../the-gallaghers/">The Gallaghers</a></li>
+      
         <li><a href="frank.html">Frank Gallagher</a></li>
         <li><a href="monica.html">Monica Gallagher</a></li>
         <li><a href="fiona.html">Fiona Gallagher</a></li>
-        <li><a href="philip.html">Philip &quot;Lip&quot; Gallagher</a></li>
-        <li><a href="ian.html">Ian Gallagher</a></li>
-        <li><a href="debbie.html">Debbie Gallagher</a></li>
-        <li><a href="carl.html">Carl Gallagher</a></li>
-        <li><a href="liam.html">Liam Gallagher</a></li>
-
+        <li><a href="lip.html">Philip &quot;Lip&quot; Gallager</a></li>
+        <li><a href="ian.html">Ian Gallager</a></li>
+        <li><a href="debbie.html">Debbie Gallager </a></li>
+        <li><a href="carl.html">Carl Gallager</a></li>
+        <li><a href="liam.html">Liam Gallager </a></li>
+        
     </ul>
       <ul>
-    		<li><a href="../main-characters/"> Main Characters</a></li>
-          <li><a href="../main-characters/kevin.html">Kevin Ball </a></li>
-          <li><a href="../main-characters/veronica.html">Veronica Ball </a></li>
-          <li><a href="../main-characters/sheila.html">Sheila Jackson</a></li>
-          <li><a href="../main-characters/mickey.html">Mickey Milkovich</a></li>
-          <li><a href="../main-characters/sammi.html">Sammi Slott</a></li>
+        <a href="../main-characters/kevin.html"></a>
       </ul>
-    </tr>
+    <a href="../About The Series.html"></a></td>
+    <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1>Carl Gallagher<br>
+        <br>
+      </h1>
+Carl Francis Gallagher (Ethan Cutkosky) is the second-youngest Gallagher child (14). He shares a room with older brothers Lip and Ian, who try to keep their more adult interests from him. Carl is often in trouble at school for attacking other students. In his early years, he displays several psychopathic tendencies such as mutilating his toys and killing stray animals, although this behavior seems to be less prevalent as he ages, and he begins to show concern for Frank. <!-- InstanceEndEditable --></td>
+  </tr>
 </table>
-    
-    
-    
-    
-    
-	<div class="content"><!-- InstanceBeginEditable name="Content" -->
-	  <h1>Carl Gallagher</h1>
-	  <p>Carl Francis Gallagher (Ethan Cutkosky) is the second-youngest Gallagher child (14). He shares a room with older brothers Lip and Ian, who try to keep their more adult interests from him. Carl is often in trouble at school for attacking other students. In his early years, he displays several psychopathic tendencies such as mutilating his toys and killing stray animals, although this behavior seems to be less prevalent as he ages, and he begins to show concern for Frank. His bond with Frank is strengthened after Frank convinces him he has cancer (for one of his schemes—later &quot;cured&quot;), and Carl helps him stay in the van after being kicked out. Later, Frank somewhat inexplicably takes the blame for a heist he and Carl have committed. In season 4, when Frank's liver fails, Carl takes it on himself to find him an organ donor, and commits many crimes with Bonnie, doing a store robbery and stealing a car to do a ram and grab, starting a pseudo-sexual relationship with her. In season 5, Carl is walking with crutches (Which according to Debbie happened because of a skateboarding accident.). Not long after stealing a mobility scooter, Holly Herkimer takes sexual interest on Carl and starts making out with him (Likely to intimidate Debbie). In s5e9, Carl deliberately gets himself sentenced to a maximum sentence at Juvie to &quot;get his education and street cred&quot;.</p>
-	<!-- InstanceEndEditable -->
-    
-
-	</div>
-</div>
-
-
-
-
-
-
-
+<p>&nbsp;</p>
 </body>
 <!-- InstanceEnd --></html>
