--- a/Templates/the-gallaghers/lip.html
+++ b/Templates/the-gallaghers/lip.html
@@ -49,9 +49,8 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
-      <h1>Frank Gallagher<br>
-        </h1>
-      <p>Frank Gallagher (William H. Macy) is the father of six children. He is a deadbeat alcoholic, drug addict, and morally deficient freeloader who relies on his children to barely get by. He swindles the state welfare system at every opportunity and he starts affairs with anyone he can, leading him to have even more children. His opportunistic deceit appears to have been impressed on his kids.</p>
+      <h1>Philip &quot;Lip&quot; Gallagher</h1>
+      <p>Phillip &quot;Lip&quot; Gallagher (Jeremy Allen White), born March 29, 1994, is the second Gallagher child and the most academically minded. He was a straight-A student throughout high school, and used his intelligence in various money-making schemes, such as running an ice cream truck that also sold beer and marijuana, or taking the SATs for fellow students (often scoring a 2400, a perfect score) for a fee. Despite his above-average intelligence, his personal life behavior is the opposite; he smokes cigarettes and marijuana, drinks alcohol, pursues casual sexual encounters with any girl, and even steals vehicles. </p>
     <!-- InstanceEndEditable --></td>
   </tr>
 </table>
