--- a/Templates/the-gallaghers/fiona.html
+++ b/Templates/the-gallaghers/fiona.html
@@ -1,76 +1,61 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Shameless Template 2.dwt" codeOutsideHTMLIsLocked="false" -->
+<!DOCTYPE HTML>
+<html><!-- InstanceBegin template="/Templates/Untitled-2.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Untitled Document</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-<link href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/styles.css" rel="stylesheet" type="text/css" />
+<!-- InstanceParam name="The Doctors Menu" type="boolean" value="true" -->
+<!-- InstanceParam name="The Companions" type="boolean" value="false" -->
+<!-- InstanceParam name="The Villains" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+body {
+	background-color: #CCC;
+}
+</style>
 </head>
 
 <body>
-<div class="wrapper">
-<div class="navigation"><!-- InstanceBeginEditable name="Navigation" -->Navigation<!-- InstanceEndEditable -->
-    <table width="950">
+<table width="950">
   <tr>
-    <td width="237" class="home"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/index.html">Home</a></td>
-    <td width="236" class="doc"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-doctors/index.html">The Gallaghers</a></td>
-    <td width="237" class="companions"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-companions/index.html">Main Characters</a></td>
-    <td width="220" class="villains"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-villains/index.html">About The Series</a></td>
+    <td width="237" class="home"><a href="../index.html">Home</a></td>
+    <td width="236" class="doc"><a href="index.html">The Gallaghers</a></td>
+    <td width="237" class="companions"><a href="../main-characters/index.html">Main Charcters </a></td>
+    <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
+  </tr>
+  <tr>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
   </tr>
 </table>
-
-  <div class="wrapper">
-<div class="banner"><!-- InstanceBeginEditable name="Banner" -->Banner<!-- InstanceEndEditable -->
-</div> 
-  </div>
-    
-    
-    <table width="950">
+<table width="950">
   <tr>
     <td class="nav"><ul>
-    	<li><a href="../the-gallaghers/">The Gallaghers</a></li>
+      
         <li><a href="frank.html">Frank Gallagher</a></li>
         <li><a href="monica.html">Monica Gallagher</a></li>
         <li><a href="fiona.html">Fiona Gallagher</a></li>
-        <li><a href="philip.html">Philip &quot;Lip&quot; Gallagher</a></li>
-        <li><a href="ian.html">Ian Gallagher</a></li>
-        <li><a href="debbie.html">Debbie Gallagher</a></li>
-        <li><a href="carl.html">Carl Gallagher</a></li>
-        <li><a href="liam.html">Liam Gallagher</a></li>
-
+        <li><a href="lip.html">Philip &quot;Lip&quot; Gallager</a></li>
+        <li><a href="ian.html">Ian Gallager</a></li>
+        <li><a href="debbie.html">Debbie Gallager </a></li>
+        <li><a href="carl.html">Carl Gallager</a></li>
+        <li><a href="liam.html">Liam Gallager </a></li>
+        
     </ul>
       <ul>
-    		<li><a href="../main-characters/"> Main Characters</a></li>
-          <li><a href="../main-characters/kevin.html">Kevin Ball </a></li>
-          <li><a href="../main-characters/veronica.html">Veronica Ball </a></li>
-          <li><a href="../main-characters/sheila.html">Sheila Jackson</a></li>
-          <li><a href="../main-characters/mickey.html">Mickey Milkovich</a></li>
-          <li><a href="../main-characters/sammi.html">Sammi Slott</a></li>
+        <a href="../main-characters/kevin.html"></a>
       </ul>
-    </tr>
+    <a href="../About The Series.html"></a></td>
+    <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1>Fiona Gallagher</h1>
+      <p>Fiona Gallagher (Emmy Rossum) is the second eldest of the Gallagher children (23). Because of her mother's absence and Frank's neglect, most of the responsibility for child-rearing falls on her shoulders; this forced her to drop out of high school in her junior year. She works a few dead-end minimum-wage jobs to support her five siblings. Though often stressed and exhausted by her responsibilities, she never fails to perform them. Prone to selflessness, she sometimes needs to be reminded to look out for her own happiness as well. At the close of Season 2, she gets her GED and begins to take interest in more serious jobs. In Season 3, after Frank calls social services on them out of sheer spite, she wins a court case (and the admiration of the judge) to be her siblings' legal guardian.<br>
+        <br>
+      </p>
+    <!-- InstanceEndEditable --></td>
+  </tr>
 </table>
-    
-    
-    
-    
-    
-	<div class="content"><!-- InstanceBeginEditable name="Content" -->
-	  <h1>Fiona Gallagher</h1>
-	  <p>Fiona Gallagher (Emmy Rossum) is the second eldest of the Gallagher children (23). Because of her mother's absence and Frank's neglect, most of the responsibility for child-rearing falls on her shoulders; this forced her to drop out of high school in her junior year. She works a few dead-end minimum-wage jobs to support her five siblings. Though often stressed and exhausted by her responsibilities, she never fails to perform them. Prone to selflessness, she sometimes needs to be reminded to look out for her own happiness as well. At the close of Season 2, she gets her GED and begins to take interest in more serious jobs. In Season 3, after Frank calls social services on them out of sheer spite, she wins a court case (and the admiration of the judge) to be her siblings' legal guardian.</p>
-	<!-- InstanceEndEditable -->
-    
-
-	</div>
-</div>
-
-
-
-
-
-
-
+<p>&nbsp;</p>
 </body>
 <!-- InstanceEnd --></html>
