--- a/Templates/the-gallaghers/index.html
+++ b/Templates/the-gallaghers/index.html
@@ -48,11 +48,7 @@ body {
         <a href="../main-characters/kevin.html"></a>
       </ul>
     <a href="../About The Series.html"></a></td>
-    <td class="content"><!-- InstanceBeginEditable name="Content" -->
-      <h1>Frank Gallagher<br>
-        </h1>
-      <p>Frank Gallagher (William H. Macy) is the father of six children. He is a deadbeat alcoholic, drug addict, and morally deficient freeloader who relies on his children to barely get by. He swindles the state welfare system at every opportunity and he starts affairs with anyone he can, leading him to have even more children. His opportunistic deceit appears to have been impressed on his kids.</p>
-    <!-- InstanceEndEditable --></td>
+    <td class="content"><!-- InstanceBeginEditable name="Content" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <p>&nbsp;</p>
