--- a/Templates/the-gallaghers/liam.html
+++ b/Templates/the-gallaghers/liam.html
@@ -1,76 +1,61 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Shameless Template 2.dwt" codeOutsideHTMLIsLocked="false" -->
+<!DOCTYPE HTML>
+<html><!-- InstanceBegin template="/Templates/Untitled-2.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="UTF-8">
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Untitled Document</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-<link href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/styles.css" rel="stylesheet" type="text/css" />
+<!-- InstanceParam name="The Doctors Menu" type="boolean" value="true" -->
+<!-- InstanceParam name="The Companions" type="boolean" value="false" -->
+<!-- InstanceParam name="The Villains" type="boolean" value="false" -->
+<link href="../styles.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+body {
+	background-color: #CCC;
+}
+</style>
 </head>
 
 <body>
-<div class="wrapper">
-<div class="navigation"><!-- InstanceBeginEditable name="Navigation" -->Navigation<!-- InstanceEndEditable -->
-    <table width="950">
+<table width="950">
   <tr>
-    <td width="237" class="home"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/index.html">Home</a></td>
-    <td width="236" class="doc"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-doctors/index.html">The Gallaghers</a></td>
-    <td width="237" class="companions"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-companions/index.html">Main Characters</a></td>
-    <td width="220" class="villains"><a href="file:///Macintosh HD/Users/communication/Desktop/Shameless2/the-villains/index.html">About The Series</a></td>
+    <td width="237" class="home"><a href="../index.html">Home</a></td>
+    <td width="236" class="doc"><a href="index.html">The Gallaghers</a></td>
+    <td width="237" class="companions"><a href="../main-characters/index.html">Main Charcters </a></td>
+    <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
+  </tr>
+  <tr>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
   </tr>
 </table>
-
-  <div class="wrapper">
-<div class="banner"><!-- InstanceBeginEditable name="Banner" -->Banner<!-- InstanceEndEditable -->
-</div> 
-  </div>
-    
-    
-    <table width="950">
+<table width="950">
   <tr>
     <td class="nav"><ul>
-    	<li><a href="../the-gallaghers/">The Gallaghers</a></li>
+      
         <li><a href="frank.html">Frank Gallagher</a></li>
         <li><a href="monica.html">Monica Gallagher</a></li>
         <li><a href="fiona.html">Fiona Gallagher</a></li>
-        <li><a href="philip.html">Philip &quot;Lip&quot; Gallagher</a></li>
-        <li><a href="ian.html">Ian Gallagher</a></li>
-        <li><a href="debbie.html">Debbie Gallagher</a></li>
-        <li><a href="carl.html">Carl Gallagher</a></li>
-        <li><a href="liam.html">Liam Gallagher</a></li>
-
+        <li><a href="lip.html">Philip &quot;Lip&quot; Gallager</a></li>
+        <li><a href="ian.html">Ian Gallager</a></li>
+        <li><a href="debbie.html">Debbie Gallager </a></li>
+        <li><a href="carl.html">Carl Gallager</a></li>
+        <li><a href="liam.html">Liam Gallager </a></li>
+        
     </ul>
       <ul>
-    		<li><a href="../main-characters/"> Main Characters</a></li>
-          <li><a href="../main-characters/kevin.html">Kevin Ball </a></li>
-          <li><a href="../main-characters/veronica.html">Veronica Ball </a></li>
-          <li><a href="../main-characters/sheila.html">Sheila Jackson</a></li>
-          <li><a href="../main-characters/mickey.html">Mickey Milkovich</a></li>
-          <li><a href="../main-characters/sammi.html">Sammi Slott</a></li>
+        <a href="../main-characters/kevin.html"></a>
       </ul>
-    </tr>
+    <a href="../About The Series.html"></a></td>
+    <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1>Liam Gallagher</h1>
+      <p>Liam Gallagher (Brennan Kane Johnson &amp; Blake Alexander Johnson) is the youngest of the Gallagher children. He is black despite having two white parents, due to a recessive black gene the Gallaghers acquired from Frank's grandmother, who (allegedly) had an affair with a jazz musician. Although stunted in verbal and emotional responses, the whole family is sentimental to Liam. In season 4, Liam ingests cocaine that Fiona acquired from Robbie Pratt (offered as a peace-offering from him on her birthday), and is hospitalized. This leads to her being arrested for child endangerment. Despite being okay, Liam is reported to have brain damage. This causes Carl's peers to make fun of him and Liam until Carl headbutts for them doing so. In season 5, he does virtually nothing to help the family in its arduous trials.<br>
+        <br>
+      </p>
+    <!-- InstanceEndEditable --></td>
+  </tr>
 </table>
-    
-    
-    
-    
-    
-	<div class="content"><!-- InstanceBeginEditable name="Content" -->
-	  <h1>Liam Gallagher</h1>
-	  <p>Liam Gallagher (Brennan Kane Johnson &amp; Blake Alexander Johnson) is the youngest of the Gallagher children. He is black despite having two white parents, due to a recessive black gene the Gallaghers acquired from Frank's grandmother, who (allegedly) had an affair with a jazz musician. Although stunted in verbal and emotional responses, the whole family is sentimental to Liam. In season 4, Liam ingests cocaine that Fiona acquired from Robbie Pratt (offered as a peace-offering from him on her birthday), and is hospitalized. This leads to her being arrested for child endangerment. Despite being okay, Liam is reported to have brain damage. This causes Carl's peers to make fun of him and Liam until Carl headbutts for them doing so. In season 5, he does virtually nothing to help the family in its arduous trials.</p>
-	<!-- InstanceEndEditable -->
-    
-
-	</div>
-</div>
-
-
-
-
-
-
-
+<p>&nbsp;</p>
 </body>
 <!-- InstanceEnd --></html>
