all images and banners added

--- a/Templates/main-characters/index.html
+++ b/Templates/main-characters/index.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><img src="../Banners/main-c.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
