--- a/Templates/main-characters/kevin.html
+++ b/Templates/main-characters/kevin.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -47,6 +47,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/kev.jpg" width="250" height="250"></h1>
       <h1>Kevin Ball </h1>
       <p>Kevin &quot;Kev&quot; Ball (Steve Howey) is the bartender and owner of the Alibi Room (the one bar from which Frank has not been banned) and the Gallaghers' neighbor and friend. Though frequently exasperated by Frank's lifestyle, he gives Frank drinks on credit and cashes his disability checks for him. He and Veronica have a successful relationship, though he is technically married to another woman who previously left him. He is dyslexic and grew up in foster care, living with several families.</p>
 <!-- InstanceEndEditable --></td>
