--- a/Templates/main-characters/mickey.html
+++ b/Templates/main-characters/mickey.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -47,6 +47,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/mickey.jpg" width="250" height="250"></h1>
       <h1>Mickey Milkovich</h1>
       <p>Mickey Milkovich is often aggressively antisocial and sometimes to the point of psychopathic and carries firearms illegally and has a very long prison record, like his father Terry. He and Ian begin their relationship when Ian goes to Mickey's house to settle his repeated open acts of shoplifting at the Kash and Grab.</p>
 <!-- InstanceEndEditable --></td>
