--- a/Templates/main-characters/sammi.html
+++ b/Templates/main-characters/sammi.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -47,6 +47,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/sammi.jpg" width="250" height="250"></h1>
       <h1>Sammi Slott</h1>
       <p>Samantha &quot;Sammi&quot; Slott (Emily Bergl; recurring season 4, regular season 5) is Frank's eldest daughter. Her existence is revealed when she is sought out by Frank when he needs a liver transplant corroded by his alcoholism. She lives in a trailer in a rundown neighborhood with just her son, Charles (Kellen Michael) also simply called, Chuckie. <br>
         <br>
