--- a/Templates/main-characters/sheila.html
+++ b/Templates/main-characters/sheila.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -47,6 +47,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/sheila.jpg" width="250" height="250"></h1>
       <h1>Sheila Jackson </h1>
       <p>Sheila Jackson (Joan Cusack) is an agoraphobic germaphobe. Sheila developed her conditions when her daughter, Karen, was young and has tried to overcome them for years. Frank seduces her in order to live in her home, taking advantage of her cooking, disability checks and bedroom hospitality. Sheila is a kind and caring person, if a bit empty-headed. Sheila eventually overcomes her condition and continues to spend a great deal of her time with Frank.</p>
 <!-- InstanceEndEditable --></td>
