--- a/Templates/main-characters/veronica.html
+++ b/Templates/main-characters/veronica.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -47,6 +47,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/veronica.jpg" width="250" height="250"></h1>
       <h1>Veronica Ball</h1>
       <p>Veronica &quot;Vee&quot; Ball&nbsp;(Shanola Hampton) is the Gallaghers' neighbor and Fiona's best friend and confidante; she often gives Fiona advice concerning relationships, caring for her siblings, and caring for herself. Always willing and able to lend a hand, Veronica had pursued a medical career until she was fired from the hospital for stealing medical supplies. She currently works as a webcam girl.</p>
 <!-- InstanceEndEditable --></td>
