--- a/Templates/the-gallaghers/fiona.html
+++ b/Templates/the-gallaghers/fiona.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -49,6 +49,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/Fiona.jpg" width="250" height="250"></h1>
       <h1>Fiona Gallagher</h1>
       <p>Fiona Gallagher (Emmy Rossum) is the second eldest of the Gallagher children (23). Because of her mother's absence and Frank's neglect, most of the responsibility for child-rearing falls on her shoulders; this forced her to drop out of high school in her junior year. She works a few dead-end minimum-wage jobs to support her five siblings. Though often stressed and exhausted by her responsibilities, she never fails to perform them. Prone to selflessness, she sometimes needs to be reminded to look out for her own happiness as well. At the close of Season 2, she gets her GED and begins to take interest in more serious jobs. In Season 3, after Frank calls social services on them out of sheer spite, she wins a court case (and the admiration of the judge) to be her siblings' legal guardian.<br>
         <br>
