--- a/Templates/the-gallaghers/frank.html
+++ b/Templates/the-gallaghers/frank.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -49,8 +49,9 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/frank.jpg" width="250" height="250"></h1>
       <h1>Frank Gallagher<br>
-        </h1>
+      </h1>
       <p>Frank Gallagher (William H. Macy) is the father of six children. He is a deadbeat alcoholic, drug addict, and morally deficient freeloader who relies on his children to barely get by. He swindles the state welfare system at every opportunity and he starts affairs with anyone he can, leading him to have even more children. His opportunistic deceit appears to have been impressed on his kids.</p>
     <!-- InstanceEndEditable --></td>
   </tr>
