--- a/Templates/the-gallaghers/ian.html
+++ b/Templates/the-gallaghers/ian.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -49,6 +49,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/ian.jpg" width="250" height="250"></h1>
       <h1>Ian Gallagher</h1>
       <p>Ian Clayton Gallagher (Cameron Monaghan) is the third of the Gallagher siblings , and according to Frank the one who resembles the most their mother Monica. It is revealed in season 1 that Ian is not Frank's biological child, and Monica seems unable or reluctant to remember his father's identity. After this revelation, Ian remains an integral part of the Gallagher household. He participates in Army JROTC at school, and during season 1 works at the Kash and Grab grocery store. When the show starts, the only other person aware of his homosexuality is his employer Kash, with whom he entertains an affair. He then comes out as gay to his brother Lip, and eventually the rest of his family. He then develops a complicated relationship with his neighbor Mickey Milkovich. <br>
         <br>
