--- a/Templates/the-gallaghers/liam.html
+++ b/Templates/the-gallaghers/liam.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -49,6 +49,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/liam.jpg" width="250" height="250"></h1>
       <h1>Liam Gallagher</h1>
       <p>Liam Gallagher (Brennan Kane Johnson &amp; Blake Alexander Johnson) is the youngest of the Gallagher children. He is black despite having two white parents, due to a recessive black gene the Gallaghers acquired from Frank's grandmother, who (allegedly) had an affair with a jazz musician. Although stunted in verbal and emotional responses, the whole family is sentimental to Liam. In season 4, Liam ingests cocaine that Fiona acquired from Robbie Pratt (offered as a peace-offering from him on her birthday), and is hospitalized. This leads to her being arrested for child endangerment. Despite being okay, Liam is reported to have brain damage. This causes Carl's peers to make fun of him and Liam until Carl headbutts for them doing so. In season 5, he does virtually nothing to help the family in its arduous trials.<br>
         <br>
