--- a/Templates/the-gallaghers/monica.html
+++ b/Templates/the-gallaghers/monica.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -49,6 +49,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/Monica.jpg" width="250" height="250"></h1>
       <h1>Monica Gallagher</h1>
       <p>Monica Gallagher (Chloe Webb) is Frank's ex-wife and the mother of the Gallagher brood; she has bipolar disorder. She feels terrible for abandoning her children but can never sustain her love and concern for them for very long before succumbing to drugs, selfishness, and depression. The older Gallagher children resent and distrust her, but she is sometimes able to coax Debbie or Carl into spending time with he<br>
         <br>
