--- a/Templates/the-gallaghers/debbie.html
+++ b/Templates/the-gallaghers/debbie.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -49,6 +49,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/debbie.jpg" width="250" height="250"></h1>
       <h1>Debbie Gallagher</h1>
       <p><br>
         Debbie Gallagher (Emma Kenney) is one of the middle Gallagher children (14). She is reserved, intent on positive impressing and willing to cover for others albeit influenced by the deleterious family culture, in contrast to her brash and reckless brothers. She brings baby brother Liam to school for show-and-tell when there's no one else to watch him, puts a pillow under her father's head when he's passed out on the floor, and collects money for charity year-round—only some of which she keeps for herself. She is capable of forgiveness for her father's neglect and irresponsibility as well as her mother's absence. She is very mature in some ways and therefore has trouble making friends with people her age.<br>
