--- a/Templates/the-gallaghers/lip.html
+++ b/Templates/the-gallaghers/lip.html
@@ -27,7 +27,7 @@ body {
     <td width="220" class="villains"><a href="../About The Series.html">About The Series </a></td>
   </tr>
   <tr>
-    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --> (banner)<!-- InstanceEndEditable --></td>
+    <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <table width="950">
@@ -49,6 +49,7 @@ body {
       </ul>
     <a href="../About The Series.html"></a></td>
     <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1><img src="../Images/lip.jpg" width="250" height="250"></h1>
       <h1>Philip &quot;Lip&quot; Gallagher</h1>
       <p>Phillip &quot;Lip&quot; Gallagher (Jeremy Allen White), born March 29, 1994, is the second Gallagher child and the most academically minded. He was a straight-A student throughout high school, and used his intelligence in various money-making schemes, such as running an ice cream truck that also sold beer and marijuana, or taking the SATs for fellow students (often scoring a 2400, a perfect score) for a fee. Despite his above-average intelligence, his personal life behavior is the opposite; he smokes cigarettes and marijuana, drinks alcohol, pursues casual sexual encounters with any girl, and even steals vehicles. </p>
     <!-- InstanceEndEditable --></td>
