--- a/Templates/index.html
+++ b/Templates/index.html
@@ -39,7 +39,10 @@ body {
         <a href="main-characters/kevin.html"></a>
       </ul>
     <a href="About The Series.html"></a></td>
-    <td class="content"><!-- InstanceBeginEditable name="Content" -->Oscar®-nominated William H. Macy and Emmy Rossum star in this fiercely engaging and fearlessly twisted series. Chicagoan Frank Gallagher is the proud single dad of six smart, industrious, independent kids, who without him would be... perhaps better off. When Frank's not at the bar spending what little money they have, he's passed out on the floor. But the kids have found ways to grow up in spite of him. They may not be like any family you know, but they make no apologies for being exactly who they are.<!-- InstanceEndEditable --></td>
+    <td class="content"><!-- InstanceBeginEditable name="Content" -->
+      <h1>SHAMELESS</h1>
+      <p>Oscar®-nominated William H. Macy and Emmy Rossum star in this fiercely engaging and fearlessly twisted series. Chicagoan Frank Gallagher is the proud single dad of six smart, industrious, independent kids, who without him would be... perhaps better off. When Frank's not at the bar spending what little money they have, he's passed out on the floor. But the kids have found ways to grow up in spite of him. They may not be like any family you know, but they make no apologies for being exactly who they are.</p>
+    <!-- InstanceEndEditable --></td>
   </tr>
 </table>
 <p>&nbsp;</p>
