--- a/Templates/styles.css
+++ b/Templates/styles.css
@@ -1,2 +1,13 @@
-/* CSS Document */
-
+button {
+	background-color: #FFC;
+}
+body {
+	background-color: #666;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	margin: 0px;
+	padding: 0px;
+}
+abbr {
+	background-color: #FFC;
+}
