--- a/Templates/About The Series.html
+++ b/Templates/About The Series.html
@@ -13,7 +13,10 @@
 <link href="styles.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 body {
-	background-color: #CCC;
+	;
+}
+body {
+	background-image: url(Images/background.gif);
 }
 </style>
 </head>
@@ -22,9 +25,9 @@ body {
 <table width="950">
   <tr>
     <td width="237" class="home"><a href="index.html">Home</a></td>
-    <td width="236" class="doc"><a href="the-gallaghers/index.html">The Gallaghers</a></td>
-    <td width="237" class="companions"><a href="main-characters/index.html">Main Charcters </a></td>
-    <td width="220" class="villains"><a href="About The Series.html">About The Series </a></td>
+    <td width="236" class="home"><a href="the-gallaghers/index.html" class="home">The Gallaghers</a></td>
+    <td width="237" class="home"><a href="main-characters/index.html">Main Charcters </a></td>
+    <td width="220" class="villains"><a href="About The Series.html" class="home">About The Series </a></td>
   </tr>
   <tr>
     <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><img src="Banners/about-the-ser-banner.jpg" width="950" height="150"><!-- InstanceEndEditable --></td>
