--- a/Templates/styles.css
+++ b/Templates/styles.css
@@ -1,13 +1,5 @@
-button {
-	background-color: #FFC;
+.home {
 }
-body {
-	background-color: #666;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	margin: 0px;
-	padding: 0px;
-}
-abbr {
-	background-color: #FFC;
+.home {
+	background-color: #999;
 }
