--- a/Templates/the-gallaghers/monica.html
+++ b/Templates/the-gallaghers/monica.html
@@ -27,7 +27,7 @@ body {
     <td width="237" class="home"><a href="../index.html">Home</a></td>
     <td width="236" class="home"><a href="index.html" class="home">The Gallaghers</a></td>
     <td width="237" class="home"><a href="../main-characters/index.html">Main Charcters </a></td>
-    <td width="220" class="villains"><a href="../About The Series.html" class="home">About The Series </a></td>
+    <td width="220" class="home"><a href="../About The Series.html" class="home">About The Series </a></td>
   </tr>
   <tr>
     <td colspan="4"><!-- InstanceBeginEditable name="Banner" --><!-- InstanceEndEditable --></td>
